tests/snapshots/spanshot_request@11671854445578896260.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: Error
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: true
  bundle_name: ergo2024
  request: "[&mut &x]: &[&mut T]"
---
[&mut &x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&mut &x @ &(*p).0: &&mut T
// Type error for `&mut &x @ &(*p).0: &&mut T`: MutabilityMismatch
